<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"

    android:id="@+id/root"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ScrollView
        android:id="@+id/scroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/linear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/substrate"
            android:orientation="vertical">

            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                xmlns:tools="http://schemas.android.com/tools"
                android:id="@+id/details_layout_vacancy_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4pt"
                android:background="@color/white"
                android:orientation="vertical"
                android:paddingBottom="4pt"
                android:paddingTop="8pt">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="4pt"
                    android:layout_marginRight="4pt"
                    android:layout_marginTop="4pt"
                    android:orientation="horizontal"
                    android:weightSum="1">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_weight="0.5">
                        <TextView
                            android:id="@+id/details_text_date"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.5"
                            android:gravity="start" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:gravity="end"
                        android:layout_weight="0.5">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/details_views"
                            android:paddingRight="1pt"
                            android:textStyle="italic" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:id="@+id/details_text_views"
                            android:layout_height="wrap_content"
                            android:textStyle="italic" />
                    </LinearLayout>

                </LinearLayout>

                <TextView
                    android:id="@+id/details_text_vacancy_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="4pt"
                    android:paddingRight="4pt"
                    android:paddingTop="4pt"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/details_text_salary"
                    android:paddingLeft="4pt"
                    android:paddingRight="4pt"
                    android:paddingTop="2pt"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="4pt"
                    android:layout_marginTop="6pt"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:paddingRight="1pt"
                        android:text="@string/details_city"
                        android:textSize="12sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/details_text_city"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:textSize="12sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="4pt"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:paddingRight="1pt"
                        android:text="@string/details_experience"
                        android:textSize="12sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/details_text_experience"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:textSize="12sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="4pt"
                    android:layout_marginLeft="4pt"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:paddingRight="1pt"
                        android:text="@string/details_type_employment"
                        android:textSize="12sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/details_text_employment"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:textSize="12sp" />
                </LinearLayout>

            </LinearLayout>

            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4pt"
                android:background="@color/white"
                android:orientation="vertical"
                android:weightSum="1">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="4pt"
                    android:layout_marginLeft="4pt"
                    android:layout_marginTop="4pt"
                    android:layout_weight="0.3"
                    android:orientation="horizontal"
                    android:weightSum="1">

                    <ImageView
                        android:id="@+id/details_image_company_logo"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_weight="0.6" />

                    <android.support.constraint.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.4"
                        android:paddingBottom="2pt"
                        android:paddingLeft="4pt"
                        android:paddingRight="4pt"
                        android:paddingTop="2pt">

                        <TextView
                            android:id="@+id/details_text_company_name"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="4dp"
                            app:layout_constraintTop_toTopOf="parent"
                            tools:layout_editor_absoluteX="25dp" />

                        <TextView
                            android:id="@+id/details_text_company_location"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="9dp"
                            app:layout_constraintTop_toBottomOf="@+id/details_text_company_name"
                            tools:layout_editor_absoluteX="16dp" />
                    </android.support.constraint.ConstraintLayout>

                </LinearLayout>

                <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                    android:layout_width="match_parent"
                    android:id="@+id/photo_list_layout"
                    android:layout_height="60pt"
                    android:layout_marginLeft="4pt"
                    android:layout_marginRight="4pt"
                    android:layout_marginBottom="4pt"
                    android:orientation="vertical">

                    <android.support.v7.widget.RecyclerView
                        android:id="@+id/details_horizontal_photo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">
                    </android.support.v7.widget.RecyclerView>

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:orientation="vertical"
                android:layout_marginBottom="4pt">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/subtitle"
                    android:paddingBottom="4pt"
                    android:paddingLeft="4pt"
                    android:paddingRight="4pt"
                    android:paddingTop="4pt"
                    android:text="@string/details_vacancy_descr"
                    android:textAllCaps="true" />

                <org.sufficientlysecure.htmltextview.HtmlTextView
                    android:id="@+id/details_text_descr"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="4pt"
                    android:paddingLeft="4pt"
                    android:paddingRight="4pt"
                    android:paddingTop="4pt" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:id="@+id/details_contact_layout"
                android:orientation="vertical"
                android:layout_marginBottom="4pt"
                android:paddingBottom="4pt">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/subtitle"
                    android:paddingBottom="4pt"
                    android:paddingLeft="4pt"
                    android:paddingRight="4pt"
                    android:paddingTop="4pt"
                    android:text="@string/details_vacancy_contacts"
                    android:textAllCaps="true" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/details_contact_person_layout"
                    android:layout_marginLeft="4pt"
                    android:layout_marginTop="4pt"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:paddingRight="1pt"
                        android:text="@string/details_contact_person"
                        android:textSize="14sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/details_contact_person"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:textSize="14sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/details_contact_site_layout"
                    android:layout_marginLeft="4pt"
                    android:layout_marginTop="3pt"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:paddingRight="1pt"
                        android:text="@string/details_contact_site"
                        android:textSize="14sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/details_contact_site"
                        android:layout_width="wrap_content"
                        android:autoLink="web"
                        android:layout_height="match_parent"
                        android:textSize="14sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/details_contact_mail_layout"
                    android:layout_marginLeft="4pt"
                    android:layout_marginTop="3pt"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:paddingRight="1pt"
                        android:text="@string/details_contact_mail"
                        android:textSize="14sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/details_contact_mail"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:textSize="14sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/details_contact_icq_layout"
                    android:layout_marginLeft="4pt"
                    android:layout_marginTop="3pt"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:paddingRight="1pt"
                        android:text="@string/details_contact_icq"
                        android:textSize="14sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/details_contact_icq"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:textSize="14sp" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</FrameLayout>